--- a/app/uitest/src/main/res/layout/fragment_helpers.xml
+++ b/app/uitest/src/main/res/layout/fragment_helpers.xml
@@ -6,5 +6,166 @@
     android:layout_height="match_parent"
     tools:context=".HelpersFragment">
 
+    <FrameLayout
+        android:id="@+id/frame1"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/grey"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <FrameLayout
+        android:id="@+id/frame2"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/black"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/frame1" />
+
+    <androidx.constraintlayout.widget.Group
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:constraint_referenced_ids="frame1, frame2" />
+
+
+    <TextView
+        android:id="@+id/short_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="shooortText"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/frame2" />
+
+    <TextView
+        android:id="@+id/long_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="looooooooooongText"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/short_text" />
+
+    <FrameLayout
+        android:id="@+id/frame_barrier"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:background="@color/teal_200"
+        app:layout_constraintLeft_toRightOf="@id/barrierVertical"
+        app:layout_constraintTop_toBottomOf="@id/barrierVertical" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrierVertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="end"
+        app:constraint_referenced_ids="short_text, long_text"
+        tools:layout_editor_absoluteX="128dp"
+        tools:layout_editor_absoluteY="324dp" />
+
+    <TextView
+        android:id="@+id/short_text_flow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@color/grey"
+        android:text="shooortText"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/long_text_flow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@color/grey"
+        android:text="looooooooooongText"
+        android:textSize="20sp" />
+
+    <androidx.constraintlayout.helper.widget.Flow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:constraint_referenced_ids="long_text_flow,short_text_flow"
+        app:flow_horizontalAlign="center"
+        app:flow_verticalGap="10dp"
+        app:flow_verticalStyle="packed"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/short_text_guideLine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="shooortText"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
+        app:layout_constraintLeft_toRightOf="@id/guidelineVertical"
+        />
+
+    <TextView
+        android:id="@+id/long_text_guideLine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="loooooo000ongText"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/short_text_guideLine"
+        app:layout_constraintLeft_toLeftOf="@id/short_text_guideLine"
+        />
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="400dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineVertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="30dp" />
+
+
+
+    <TextView
+        android:id="@+id/short_text_layer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="shooortText"
+        android:elevation="10dp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="@id/frame_barrier"
+        android:background="@color/grey"
+        />
+
+    <TextView
+        android:id="@+id/long_text_layer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="loooooo000ongText"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/short_text_layer"
+        app:layout_constraintLeft_toLeftOf="@id/short_text_layer"
+        />
+
+
+    <androidx.constraintlayout.helper.widget.Layer
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:elevation="100dp"
+        android:padding="10dp"
+        app:constraint_referenced_ids="long_text_layer,short_text_layer"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
