--- a/app/uitest/src/main/res/values/colors.xml
+++ b/app/uitest/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#DFDEDE</color>
+    <color name="orange">#F3D7AF</color>
 </resources>
