setting - gradle 버전관리 파일 생성

--- a/app/uitest/src/main/res/layout/fragment_buttons.xml
+++ b/app/uitest/src/main/res/layout/fragment_buttons.xml
@@ -116,7 +116,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="RadioButton"
-            style="@style/Widget.Material3.CompoundButton.RadioButton"
+            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
             tools:layout_editor_absoluteX="62dp"
             tools:layout_editor_absoluteY="303dp" />
 
